@@ -82,6 +82,12 @@ environment variable, like this:
 
  % export ANYEVENT_OPEN3_SIMPLE=idle
 
+=item * raw
+
+If set to true (false is the default) then output will not be passed
+into the C<on_stdout> and C<on_stderr> callbacks as lines, but instead
+as chunks in whatever order they come.  New lines will not be stripped.
+
 =back
 
 =head2 EVENTS
