@@ -36,3 +36,6 @@ remove = Exporter
 [Author::Plicease::Thanks]
 current = Graham Ollis <plicease@cpan.org>
 contributor = Stephen R. Scaffidi
+
+[OSPrereqs / MSWin32]
+EV = 0
